--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "connect-mongo": "^0.4.1",
     "express": "3.4.8",
     "jade": "*",
     "mongoose": "^3.8.13",
